--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -25,6 +25,8 @@ scriptContent:
         	}
         	elementColors = {
         		main: "#2D433F",
+        		mainBorder: "#1E7C6D",
+        		complex: ''#0CBBE7'',
         		iterators: [
         			''#ffd66b'',
         			''#654062'',
@@ -32,7 +34,10 @@ scriptContent:
         			''#f4f4f4''
         		],
         		iteratorsBorder: [
-        			''#4D4637''
+        			''#FFCE7B'',
+        			''#657AB3'',
+        			''#FFA78C'',
+        			''#CFEDFF''
         		]
         	}
         	graph = new joint.dia.Graph;
@@ -58,6 +63,7 @@ scriptContent:
           		maxY: 300,
         	};
         	strStep = ''com.twinsoft.convertigo.beans.steps.''
+        	waitingToBeRendered = false;
         	/*End_c8o_PageDeclaration*/
         /*Begin_c8o_PageConstructor*/		
         		this.local.maxX = 0
@@ -147,7 +153,7 @@ scriptContent:
             }
         	
         	makeLink(source, target, label, graph: joint.dia.Graph, previousThen, previousElse, startDirection, colorLink) {
-        
+        		 
                 var link = new joint.shapes.standard.ShadowLink({
         		    source: source,
         		    target: target,
@@ -218,6 +224,16 @@ scriptContent:
         
         	makeElement(opts, graph, color) {
         		var element = new joint.shapes.standard.InscribedImage
+        		
+        		var colorIndex;
+        		var borderColor;
+        		
+        		if(this.elementColors.iterators.indexOf(color) >= 0) {
+        			colorIndex = this.elementColors.iterators.indexOf(color);
+        			borderColor = this.elementColors.iteratorsBorder[colorIndex];
+        		} else {
+        			borderColor = this.elementColors.mainBorder;
+        		}
         
         		element.resize(70,70);
         		element.position(opts.attrs.position.x, opts.attrs.position.y)
@@ -225,7 +241,7 @@ scriptContent:
         		element.attr(''label/text'', opts.props.displayName)
         		element.attr(''label/fill'', ''#fff'');
         		element.attr(''background/fill'', color);
-        		element.attr(''border/stroke'', ''#1E7C6D'');
+        		element.attr(''border/stroke'', borderColor); //#1E7C6D
         		element.attr(''background/fillOpacity'', 0.5);
         		element.attr(''image'', {
         				xlinkHref: this.c8o.endpoint + ''/.bin?__sequence=GetIcon&className='' + opts.props.className + ''&large=true&__nolog=true'',
@@ -603,22 +619,27 @@ scriptContent:
         			
         			if(stepIsInBranch)
         				refBranchStart = parent.id
-        			
-        			if(this.isInArray(this.iteratorSteps, previousClassName))
-        				refBranchIterator = parent.id
         				
         			if(previous.attributes.isInIterator)
         				refBranchIterator = previous.attributes.refBranchIterator	
         			
+        			if(this.isInArray(this.iteratorSteps, previousClassName))
+        				refBranchIterator = parent.id
+        
         			if(this.isInArray(this.iteratorSteps, parentClassName) && parent.attributes.depthLvl < nodeObject[i].dbo.depthLvl || previous.attributes.isInIterator)
         				stepIsInIterator = true;
         		
         			var elColor;
-        			if(stepIsInIterator) {
+        			if(this.isInArray(this.iteratorSteps, stepClassName)) {
+        				elColor = this.elementColors.iterators[nodeObject[i].dbo.depthLvl]
+        			} else if(stepIsInIterator) {
         				var iteratorRef = this.graph.getCell(refBranchIterator)
         				elColor = this.elementColors.iterators[iteratorRef.attributes.depthLvl]
         			} else {
-        				elColor = this.elementColors.main
+        				if(nodeObject[i].dbo.isComplex)
+        					elColor = this.elementColors.complex
+        				else
+        					elColor = this.elementColors.main
         			}
         			if(!parentIsComplex && stepClassName != "ThenStep" && stepClassName != "ElseStep") {
         				
@@ -668,6 +689,8 @@ scriptContent:
         					var iteratorRef = this.graph.getCell(el.attributes.refBranchIterator)
         					var depthLvl = iteratorRef.attributes.depthLvl
         					linkColor = this.linkColors.iterators[depthLvl]
+        					if(previous.attributes.isInIterator && this.isInArray(this.iteratorSteps, stepClassName))
+        						linkColor = this.linkColors.main
         				} else {
         					linkColor = this.linkColors.main
         				}
@@ -833,7 +856,7 @@ scriptContent:
         //			},
                 this.paper = this.createPaper(paperOpts);
         		this.paper.setOrigin(this.graphOriginX, this.graphOriginY)
-        		
+        				
         		// this.makeCustomElement();
         
         		/**
@@ -939,7 +962,16 @@ scriptContent:
         		                    return false
         		                else
         		                    return true
-        		            }
+        		            },
+        					beforeRender: function() {
+        						this.waitingToBeRendered = true;
+        					},
+        					afterRender: function(stats, options, paper) {
+        						this.waitingToBeRendered = false;
+        						console.log(''stats:'' + stats)
+        						console.log(this.waitingToBeRendered)
+        						alert(this.waitingToBeRendered)
+        					}
         		        }
         			
         				var paper = this.createPaper(paperOpts);
@@ -1053,7 +1085,16 @@ scriptContent:
         //						if(previous != null) {
         //							x = previous.atrributes.position.x + this.horizontalSpace;
         //							y = previous.attributes.position.y
-        //						}
+        //
+        						var elColor;
+        						if(this.isInArray(this.iteratorSteps, newElementClassName)) {
+        							elColor = this.elementColors.iterators[newElement.dbo.depthLvl]
+        						} else {
+        							if(newElement.dbo.isComplex)
+        								elColor = this.elementColors.complex
+        							else
+        								elColor = this.elementColors.main
+        						}
         						var elmtOpts = {
             						attrs: {
                 						position: {
@@ -1073,7 +1114,7 @@ scriptContent:
         							    properties: newElement.dbo.properties
             						}
         						}
-        						var el = (newElement.dbo.isComplex) ? this.makeComplexElement(elmtOpts, this.graph, "#2D433F") : this.makeElement(elmtOpts, this.graph, "#2D433F")
+        						var el = (newElement.dbo.isComplex) ? this.makeComplexElement(elmtOpts, this.graph, elColor) : this.makeElement(elmtOpts, this.graph, elColor)
         
         						
         						if(previous != null && !this.isInArray(this.ifThenElseSteps, previousClassName)) // && previousClassName != "IfThenElseStep"
