--- a/_c8oProject/mobilePages/FlowViewer.yaml
+++ b/_c8oProject/mobilePages/FlowViewer.yaml
@@ -153,7 +153,7 @@ scriptContent:
             }
         	
         	makeLink(source, target, label, graph: joint.dia.Graph, previousThen, previousElse, startDirection, colorLink) {
-        		 
+        		
                 var link = new joint.shapes.standard.ShadowLink({
         		    source: source,
         		    target: target,
@@ -710,6 +710,8 @@ scriptContent:
         				} else if (this.isInArray(this.ifSteps, previousClassName) && this.isInArray(this.ifThenElseSteps, stepClassName)) {
         					startDirection = (previousNodeObject.dbo.children != undefined) ? ''right '' : ''top''
         					this.makeLink(previous, el, label, graph, previousThen, previousElse, startDirection, linkColor) // top
+        				} else if(this.isInArray(this.iteratorSteps, previousClassName) && !el.attributes.isInIterator) {
+        					this.makeLink(previous, el, label, graph, previousThen, previousElse, "bottom", linkColor)
         				} else if(!this.isInArray(this.ifSteps, previousClassName) && !this.isInArray(this.ifThenElseSteps, previousClassName)) {
         					this.makeLink(previous, el, label, graph, previousThen, previousElse, "right", linkColor)
         				} else if(!this.isInArray(this.ifThenElseSteps, stepClassName) && !this.isInArray(this.ifSteps, stepClassName)) {
@@ -1035,7 +1037,7 @@ scriptContent:
         							y = 70
         						}
         						
-        						if(previous != null && this.isInArray(this.ifSteps, previousClassName)) { //previousClassName == "IfStep"g
+        						if(previous != null && this.isInArray(this.ifSteps, previousClassName) || this.isInArray(this.iteratorSteps, previousClassName)) { //previousClassName == "IfStep"g
         							if(previousClassName != previousFromSequenceClassName) {
         								var lastElement = this.getLastElementFromSimpleBranch(previous, 1);
         								x = lastElement.attributes.position.x + this.horizontalSpace;
@@ -1117,8 +1119,11 @@ scriptContent:
         						var el = (newElement.dbo.isComplex) ? this.makeComplexElement(elmtOpts, this.graph, elColor) : this.makeElement(elmtOpts, this.graph, elColor)
         
         						
-        						if(previous != null && !this.isInArray(this.ifThenElseSteps, previousClassName)) // && previousClassName != "IfThenElseStep"
-        							var link = this.makeLink(previous, el, '''', this.graph, false, false, "right", ''#77ACA1'')
+        //						if(previous != null && !this.isInArray(this.ifThenElseSteps, previousClassName)) // && previousClassName != "IfThenElseStep"
+        //							var link = this.makeLink(previous, el, '''', this.graph, false, false, "right", ''#77ACA1'')
+        							
+        //						if(previous != null && this.isInArray(this.iteratorSteps, previousClassName))
+        //							this.makeLink(previous, el, '''', this.graph, false, false, "bottom", "#77ACA1")
         
         						
         						if(previous != null && this.isInArray(this.ifThenElseSteps, previousClassName)) { // this.getClassName(previous.attributes.className) == "IfThenElseStep"
@@ -1193,6 +1198,23 @@ scriptContent:
         							// minus = 2 because element has been created so the successors length got + 1
         //							var lastElementFromSimpleBranch = this.getLastElementFromSimpleBranch(previous, 2)
         //							this.makeLink(lastElementFromSimpleBranch, el, '''', this.graph, false, false)
+        						} else if(previous != null && this.isInArray(this.iteratorSteps, previousClassName)) {
+        							this.makeLink(previous, el, '''', this.graph, false, false, "bottom", "#77ACA1")
+        							if(lastCell != undefined && lastCell.attributes.type == "standard.ShadowLink") {
+        										// So if it a link, the true last cell is its target
+        										if(lastCell.attributes.target != undefined) {
+        											var lastCellTarget = lastCell.attributes.target
+        //											console.log(''target: '' + JSON.stringify(lastCellTarget))
+        											if(lastCellTarget.attributes.isInIterator) {
+        												this.makeLink(lastCellTarget, el, '''', this.graph, false, false, "right", ''#77ACA1'')
+        											}
+        
+        											// y = lastCellTarget.attributes.position.y
+        										}
+        							}
+        						} else {
+        							if(previous != null && !this.isInArray(this.ifThenElseSteps, previousClassName)) // && previousClassName != "IfThenElseStep"
+        								var link = this.makeLink(previous, el, '''', this.graph, false, false, "right", ''#77ACA1'')
         						}
         						
         						previous = el
