FlowViewer - add boxes around iterator steps

--- a/_c8oProject/mobileApplication.yaml
+++ b/_c8oProject/mobileApplication.yaml
@@ -1515,6 +1515,7 @@ tplProjectName: C8oStudio
           	min-height: 300px;
           	max-height: 500px;
           	overflow-y: scroll;
+          	border-radius: 5px;
           }
           
           .properties-panel-header {
